--- a/site/guide/model-workflows/_review-workflow-history.qmd
+++ b/site/guide/model-workflows/_review-workflow-history.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Review a timeline of workflows running or previously run on your model:
+Review a timeline of workflows running or previously run on a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -22,7 +22,7 @@ Review a timeline of workflows running or previously run on your model:
 
 
 :::: {.content-hidden unless-format="revealjs"}
-Review a timeline of workflows running or previously run on your model:
+Review a timeline of workflows running or previously run on a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
