--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -28,60 +28,11 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 ## Initiate model workflows
 
-::: {.callout}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
-:::
-
-To manually start a workflow[^4] for a specific model:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^5]
-
-3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
-
-4. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
-
-5. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
-
-    - **Run Now** — Workflow starts instantly.
-    - **Scheduled Run** — Set a future date to run the workflow.
-
-6. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
-
-### Resume workflows
-
-To manually resume a workflow in a {{< fa clock >}} Wait state:[^6]
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^7]
-
-3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
-
-4. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
-
-5. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
+{{< include /guide/model-workflows/_initiate-model-workflows.qmd >}}
 
 ## Abort workflows
 
-::: {.callout}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to abort workflows.
-:::
-
-To cancel a run of a workflow on a model:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^8]
-
-3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
-
-4. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
-
-5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
-
-6. On the confirmation page, leave **[restart workflow after aborting]{.smallcaps}** untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
+{{< include /guide/model-workflows/_abort-workflows.qmd >}}
 
 
 <!-- FOOTNOTES -->
@@ -91,17 +42,3 @@ To cancel a run of a workflow on a model:
 [^2]: [Configure custom workflows](configure-model-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
-
-[^4]:
-
-    ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
-    Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
-    :::
-
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^6]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
-
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
