--- a/site/guide/model-workflows/transition-model-workflows.qmd
+++ b/site/guide/model-workflows/transition-model-workflows.qmd
@@ -21,26 +21,9 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 {{< include _transition-model-workflows.qmd >}}
 
-## Reset your model workflow
+## Reset model workflows
 
-::: {.callout}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to reset model workflows.
-:::
-
-
-If you need to reset a model's workflow to the beginning:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^5]
-
-3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
-
-4. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
-
-5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
-
-6. On the confirmation page, toggle **[restart workflow after aborting]{.smallcaps}**, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
+{{< include _reset-model-workflows.qmd >}}
 
 
 <!-- FOOTNOTES -->
@@ -52,5 +35,3 @@ If you need to reset a model's workflow to the beginning:
 [^3]: [Configure model workflows](configure-model-workflows.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
-
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
