--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -45,7 +45,8 @@ This third module is part of a four-part series:
 ::: {.f2}
 1. [{{< var vm.product >}} for model risk management](#validmind-for-model-risk-management)
 2. [Set up custom workflows](#set-up-workflows)
-3. [Set up attestations](#set-up-attestations)
+3. [Manage model workflows](#manage-model-workflows)
+4. [Set up attestations](#set-up-attestations)
 
 :::
 
@@ -154,7 +155,7 @@ Manage model stages
 
 :::
 
-::: {.column width="70%" .bl .pl4 .f4}
+::: {.column width="70%" .bl .pl4 .f3}
 
 {{< include /guide/model-workflows/_configure-model-stages.qmd >}}
 
@@ -242,7 +243,7 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 1. Click **{{< fa plus >}} Add Workflow**.
 2. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
-3. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated.
+3. Under **[workflow start]{.smallcaps}**, select **Manually**.
 4. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow.
 5. Click **Add Workflow** to save your blank workflow.
 
@@ -258,15 +259,115 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::
 
 1. Click on the workflow you'd added earlier, then:
-  - To add a step, drag and drop a new step onto the canvas.
+  - To add a step, drag and drop a new step onto the canvas. For example: {{< fa arrow-pointer >}} User Action v2
   - Double-click the new step to open up the configuration modal.
 2. After you're finished with step configuration, click **Update Step** to apply your changes.
-3. After you've configured a step, link your workflow together:
+3. After you've configured a step, link your example workflow together:
   - Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
   - Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the step you added previously.
 4. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
 5. Link your previous step to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of that step, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
 6. Click **Save Workflow** to apply your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+# Manage model workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Run model workflows
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/manage-model-workflows.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+Now, let's initiate our sample workflow manually:
+
+{{< include /guide/model-workflows/_initiate-model-workflows.qmd >}}
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Initiate a model workflow**
+:::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+3. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
+4. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you configured earlier, then select **Run Now** under **[workflow start]{.smallcaps}**.
+5. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Reset & abort model workflows
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/transition-model-workflows.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+As an administrator, you may need to reset or abort model workflows as required:
+
+::: {.panel-tabset}
+
+#### Reset workflows
+
+{{< include /guide/model-workflows/_reset-model-workflows.qmd >}}
+
+#### Abort workflows
+
+{{< include /guide/model-workflows/_abort-workflows.qmd >}}
+
+:::
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Reset a model workflow**
+:::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+3. Click on the name of the workflow you manually initiated earlier to open that workflow's details.
+4. Click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
+5. Toggle **[restart workflow after aborting]{.smallcaps}** on, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
