--- a/site/training/common-slides/_work-with-workflows.qmd
+++ b/site/training/common-slides/_work-with-workflows.qmd
@@ -29,6 +29,8 @@ When all the actions that can be performed by your role are completed for that m
 ::: {.panel-tabset}
 ### Verify workflows
 
+Workflows are configured by an administrator in advance. When transitioning a workflow, verify that the workflow steps reflect your organization's requirements for that part of the model lifecycle.
+
 {{< include /guide/model-workflows/_review-active-workflows.qmd >}}
 
 ### Advance workflows
