--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -181,6 +181,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 ::: {.w-50-ns}
 #### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
 - Set up custom workflows
+- Manage workflows on models
 - Set up attestations
 
 :::
@@ -189,6 +190,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 #### <sup>Module 4</sup><br> Organizational Oversight & Reporting
 
 - Audit model activity
+- Audit model workflows
 - View and customize analytics
 
 :::
