--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -23,24 +23,16 @@ aliases:
 
 2. Under Models, select **Model Inventory Fields**.
 
-    Displayed in groups[^2] as lists are the inventory fields available to models in your organization with a quick view of:
+    Displayed in groups[^2] as lists are the inventory fields available to models in your organization with a quick view of:[^3]
 
-    - Number of workflows that field is used in[^3]
+    - Number of workflows that field is used in[^4]
     - The field key
-    - The field type[^4]
+    - The field type[^5]
     - Field description
     - Whether or not the field is required when creating models
     - Quick actions you can take on the inventory field
 
 3. Narrow down existing inventory fields available to your models by searching or filtering for results:
-
-::: {.column-margin}
-
-::: {.callout title="Note that searching and filtering of fields stack."}
-For example, if you first search by keyword for `date` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
-:::
-
-:::
 
 ::: {.panel-tabset}
 
@@ -60,13 +52,17 @@ a. Click **{{< fa filter >}} Filter** to filter fields by any of the following c
 
     - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on model registration.
     - **[types]{.smallcaps}** — What type of field it is.
-    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^5]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^6]
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^6]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^7]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
     Expand any inventory field group to see more fields.
 
+:::
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `date` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
 :::
 
 ## Add or edit inventory fields
@@ -96,7 +92,7 @@ To group model inventory fields, first create an inventory field group:
 
 4. Click **Create Group** to add the new group.
 
-5. Assign the desired fields to the group.[^7]
+5. Assign the desired fields to the group.[^8]
 
 ## Delete inventory fields
 
@@ -117,12 +113,18 @@ To group model inventory fields, first create an inventory field group:
 
 [^2]: [Add inventory field groups](#add-inventory-field-groups)
 
-[^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^3]:
 
-[^4]: [Inventory field types](#inventory-field-types)
+    ::: {.callout title="Missing column headers?"}
+    Click, hold, and drag to the right to reveal additional columns.
+    :::
 
-[^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^6]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^5]: [Inventory field types](#inventory-field-types)
 
-[^7]: [Add or edit inventory fields](#add-or-edit-inventory-fields)
+[^6]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+
+[^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^8]: [Add or edit inventory fields](#add-or-edit-inventory-fields)
