--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -20,24 +20,16 @@ Manage the fields that appear on all finding types logged on your models. Choose
 
 2. Under Findings, select **Finding Fields**.
 
-    Displayed in groups[^2] as lists are the findings fields available to findings in your organization with a quick view of:
+    Displayed in groups[^2] as lists are the findings fields available to findings in your organization with a quick view of:[^3]
 
-    - Number of workflows that field is used in[^3]
+    - Number of workflows that field is used in[^4]
     - The field key
-    - The field type[^4]
+    - The field type[^5]
     - Field description
     - Whether or not the field is required when creating findings
     - Quick actions you can take on the finding field
 
 3. Narrow down existing findings fields available to your findings by searching or filtering for results:
-
-::: {.column-margin}
-
-::: {.callout title="Note that searching and filtering of fields stack."}
-For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
-:::
-
-:::
 
 ::: {.panel-tabset}
 
@@ -57,12 +49,16 @@ a. Click **{{< fa filter >}} Filter** to filter fields by any of the following c
 
     - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on finding creation.
     - **[types]{.smallcaps}** — What type of field it is.
-    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^5]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^6]
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^6]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^7]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
     Expand any inventory field group to see more fields.
+:::
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
 :::
 
 ## Add or edit finding fields
@@ -80,11 +76,11 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 To add a new finding field, click **{{< fa plus >}} Add Field**:
 
-a. Finding fields require a [type]{.smallcaps},[^7] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^8]
+a. Finding fields require a [type]{.smallcaps},[^8] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^9]
 
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.[^9]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^10]
+    - (Optional) You can also assign a field to a group.[^10]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^11]
 
 a. When you are satisfied with the setup of your finding field, click **Save**.
 
@@ -94,7 +90,7 @@ To edit an existing finding field:
 
 a. Hover over the finding field you would like to edit.
 
-    Expand any inventory field group to see more fields.[^11]
+    Expand any inventory field group to see more fields.[^12]
 
 a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
@@ -108,7 +104,7 @@ Single Line Text
 : Simple text value.
 
 Attachments
-: Upload supporting files for your model.[^12] Files must be less than 50 MB each in size.
+: Upload supporting files for your model.[^13] Files must be less than 50 MB each in size.
 
 Long Text
 : Toggle **Enable rich text formatting** to create a template using the rich text editor.
@@ -148,19 +144,19 @@ URL
 Date
 : - Date value in `yyyy-mm-dd` format. 
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
-- Set the [date format]{.smallcaps} for date fields under your profile.[^13]
+- Set the [date format]{.smallcaps} for date fields under your profile.[^14]
 
 Date Time
 : - Date value in `yyyy-mm-dd, 24hr` format.
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
-- Set the [date format]{.smallcaps} for date time fields under your profile.[^14]
+- Set the [date format]{.smallcaps} for date time fields under your profile.[^15]
 
 Email
 : Text value in valid email (`user@domain.com`) format.
 
 User
 : 
-- Select list pre-populated with users from your {{< fa book-open >}} User Directory.[^15]
+- Select list pre-populated with users from your {{< fa book-open >}} User Directory.[^16]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
 ## Add finding field groups
@@ -175,7 +171,7 @@ To group finding fields, first create a finding field group:
 
 4. Click **Create Group** to add the new group.
 
-5. Assign the desired fields to the group.[^16]
+5. Assign the desired fields to the group.[^17]
 
 ## Delete finding fields
 
@@ -196,21 +192,27 @@ To group finding fields, first create a finding field group:
 
 [^2]: [Add finding field groups](#add-finding-field-groups)
 
-[^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^3]:
 
-[^4]: [Finding field types](#finding-field-types)
+    ::: {.callout title="Missing column headers?"}
+    Click, hold, and drag to the right to reveal additional columns.
+    :::
 
-[^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^6]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^5]: [Finding field types](#finding-field-types)
 
-[^7]: [Finding field types](#finding-field-types)
+[^6]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
-[^8]: [Manage finding types](manage-finding-types.qmd)
+[^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^9]: [Add finding field groups](#add-finding-field-groups)
+[^8]: [Finding field types](#finding-field-types)
 
-[^10]:
+[^9]: [Manage finding types](manage-finding-types.qmd)
+
+[^10]: [Add finding field groups](#add-finding-field-groups)
+
+[^11]:
 
     ::: {.callout title="Leave this field blank to leave permissions as default."}
     - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
@@ -223,14 +225,14 @@ To group finding fields, first create a finding field group:
 
     :::
 
-[^11]: [Add finding field groups](#add-finding-field-groups)
+[^12]: [Add finding field groups](#add-finding-field-groups)
 
-[^12]: [Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)
-
-[^13]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
+[^13]: [Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)
 
 [^14]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
-[^15]: [Manage users](/guide/configuration/manage-users.qmd)
+[^15]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
-[^16]: [Add or edit finding fields](#add-or-edit-finding-fields)
+[^16]: [Manage users](/guide/configuration/manage-users.qmd)
+
+[^17]: [Add or edit finding fields](#add-or-edit-finding-fields)
