--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -47,10 +47,12 @@ Switch a document to a completely different template, or apply another version o
    - Click **{{< fa magnifying-glass >}} Search** to search for documents by keywords in the document title.
    - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list using different criteria in ascending or descending order.[^4]
 
-   ::: {.callout title="Note that searching and sorting of fields stack."}
+   <!-- ::: {.column-margin}
+   **Note that searching and sorting of fields stack.**
+
    For example, if you first search by keyword for `ValidMind` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
 
-   :::
+   ::: -->
 
 5. On your document's detail page, locate [document template]{.smallcaps}.
 
@@ -127,6 +129,10 @@ Delete templates no longer required by your organization:
    - **[type]{.smallcaps}** — Sort by document type alphabetically.
    - **[date created]{.smallcaps}** — Sort by creation date.
    - **[date updated]{.smallcaps}** — Sort by last update date.
+
+      **Searching and sorting of fields stack.**<br>
+
+      For example, if you first search by keyword for `ValidMind` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
 
 [^5]: [Customize document templates](customize-document-templates.qmd#edit-template-outlines)
 
