--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "<h4>[[back to contents]{.smallcaps .b}](#contents)</h4><small>{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)</small>"
+    footer: "<h4>[[contents]{.smallcaps .b}](#contents)</h4><small>{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)</small>"
     revealjs-plugins:
       - slideover
   html:
@@ -31,6 +31,10 @@ skip_preview: true
 ---
 
 # [Contents]{.hidden}{background-image="circle.svg"}
+
+::: footer
+<h4>[contents]{.smallcaps .b}</h4><small>{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)</small>
+:::
 
 :::: {.columns}
 
