--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -19,10 +19,10 @@ bread-crumbs: false
 ```
 
 ::: {.column-screen}
-<script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
+<script type="module" src="rapidoc-min.js"></script>
 
 <rapi-doc 
-    spec-url="https://api.prod.validmind.ai/vm/api/v1/swagger.json"
+    spec-url="vm-api-swagger.json"
     server-url="https://api.prod.validmind.ai/vm/api/v1/"
     default-api-server="https://api.prod.validmind.ai/vm/api/v1/"
     show-header="false"
