--- a/site/guide/access/accessing-validmind.qmd
+++ b/site/guide/access/accessing-validmind.qmd
@@ -14,6 +14,7 @@ listing:
     fields: [title, description]
     contents:
     - register-with-validmind.qmd
+    - sign-up-via-aws-marketplace.qmd
     - log-in-to-validmind.qmd
 aliases:
   - /guide/configuration/accessing-validmind.html
